vagrant/manifests/flagsmith-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: flagsmith-ingress
  namespace: default

spec:
  rules:
    - host: "*.flagsmith.linkedin.io"
      http:
        paths:
          - path: /
            pathType:  Prefix
            backend:
              service:
                name:  flagsmith-frontend
                port:
                  number: 8080
          - path: /api
            pathType:  Prefix
            backend:
              service:
                name:  flagsmith-api
                port:
                  number: 8080
    - host: "flagsmith.linkedin.io"
      http:
        paths:
          - path: /
            pathType:  Prefix
            backend:
              service:
                name:  flagsmith-frontend
                port:
                  number: 8080
          - path: /api
            pathType:  Prefix
            backend:
              service:
                name:  flagsmith-api
                port:
                  number: 8080
