vagrant/manifests/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`javacd.linkedin.io`, `{subhost:[a-z]+}.javacd.linkedin.io`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: HostRegexp(`javacd.linkedin.io`, `{subhost:[a-z]+}.javacd.linkedin.io`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default
    options: {}
